implement kata